--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
     ports:
       - 8080:80
     volumes:
-      - ./:/var/www:cached
-      - ./docker/configs/nginx/nginx.conf:/etc/nginx/nginx.conf:cached
-      - ./docker/configs/nginx/vhost.conf:/etc/nginx/conf.d/default.conf:cached
+      - ./:/var/www
+      - ./docker/configs/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./docker/configs/nginx/vhost.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - "app"
       - "database"
@@ -37,8 +37,8 @@ services:
       REDIS_HOST: redis
       REDIS_PORT: 6379
     volumes:
-      - ./:/var/www:cached
-      - ./docker/configs/php/php.ini:/usr/local/etc/php/conf.d/php.ini:cached
+      - ./:/var/www
+      - ./docker/configs/php/php.ini:/usr/local/etc/php/conf.d/php.ini
     depends_on:
       - "database"
     networks:
